<resources>
    <string name="app_name">My Cookbook</string>
    <string name="title_search">Search</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="recipeViews">Recipes</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="recipe_title">Recipe Title:</string>
    <string name="image">Image</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="save_recipe_button"><b>Save Recipe</b></string>
    <string name="add_button">Add</string>
    <string name="add_step_button">ADD STEP</string>
    <string name="amt">Amt</string>
    <string name="amt_format">%.3f</string>
    <string name="view_recipe_label">View Recipe</string>
    <string name="select_units">Select units</string>
    <string name="tags">Tags</string>
    <string name="search_sort_by_title">Sort By</string>
    <string name="search_input_hint">Search Recipes</string>
    <string name="sort_option_newest_first">Newest First</string>
    <string name="sort_option_oldest_first">Oldest First</string>
    <string name="sort_option_name_asc">Name Ascending</string>
    <string name="sort_option_name_desc">Name Descending</string>
    <string name="dialog_positive_button_text">OK</string>
    <string name="dialog_negative_button_text">Cancel</string>
    <string name="image_pick_recipe_title">Choose image for this recipe</string>
    <string name="form_ingredient_option_unit_cups">Cups</string>
    <string name="form_ingredient_option_unit_grams">Grams</string>
    <string name="form_ingredient_option_unit_half">Half</string>
    <string name="form_ingredient_option_unit_tablespoons">Tablespoons</string>
    <string name="form_ingredient_option_unit_teaspoons">Teaspoons</string>
    <string name="form_ingredient_option_unit_whole">Whole</string>
    <string name="recipe_saved_message">Recipe saved!</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="cups">Cups</string>
    <string name="instruction">Instruction</string>
    <string name="edit_recipe">Edit Recipe</string>
</resources>