<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ingredient_name_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:text="@string/name" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ingredient_amount_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:text="@string/amount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ingredient_serving_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:text="@string/cups" />

    <ImageView
        android:id="@+id/add_to_shopping_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_add_shopping_cart"
        app:tint="@color/green_700" />

</LinearLayout>