<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.form.FormFragment">

        <TextView
            android:id="@+id/form_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recipe_title"
            android:textAlignment="textStart"
            android:fontFamily="@font/baloo2_regular"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo2_regular"
                android:background="@color/white"
                android:inputType="textCapWords">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recipe_image_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/image"
            android:fontFamily="@font/baloo2_regular"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/form_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:src="@drawable/recipe_placeholder"
            android:adjustViewBounds="true">

        </ImageView>

        <TextView
            android:id="@+id/recipe_ingridients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo2_regular"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_regular" />

        <TextView
            android:id="@+id/recipe_instructions_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo2_regular"
            android:textSize="20sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/instruction_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tags"
            android:textSize="20sp"
            android:fontFamily="@font/baloo2_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tag_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textCapSentences"
                    android:imeOptions= "actionNext"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/tag_enter_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_left"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                app:tint="@color/green_700" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/form_tags_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Chip.Entry"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_regular"
            android:text="@string/save_recipe_button" />

    </LinearLayout>

</ScrollView>